# NumericalAnalysis

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py
.githooks/: pre-push
.github/workflows/: cpp-tests.yml  python-tests.yml  quality-gates.yml
include/numeric/: root_approximation.hpp
python/numeric/: __init__.py
scripts/: check_doxygen.py  run_cpp_tests.sh
src/: root_approximation.cpp
src/bindings/: root_approximation.cpp
tests/: pytest.ini  test_root_approximation.cpp  test_root_approximation.py
